# typerry

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.zh.md  example.sh  extract.js  index.d.ts  index.js  main.js  package-lock.json  package.json
.github/workflows/: publish.yml
examples/bare/: input.ts  preview.html
examples/html/: input.ts
examples/wasm/: index.js  input.ts
src/: lib.rs  main.rs
